# JosdorOS

./: .gitignore  README.md
backend/routerd/: Cargo.toml
backend/routerd/src/: main.rs
backend/routerd/src/api/: health.rs  mod.rs
backend/routerd/src/api/firewall/: mod.rs
backend/routerd/src/api/monitoring/: mod.rs
backend/routerd/src/api/network/: config.rs  mod.rs
backend/routerd/src/api/setup/: mod.rs
backend/routerd/src/api/system/: mod.rs
backend/routerd/src/firewall/: config.rs  mod.rs
backend/routerd/src/nftables/: config.rs
backend/routerd/src/setup/: boot.rs  config.rs  default_config.toml  init.rs  mod.rs  network.rs  utils.rs
backend/routerd/src/system/: utils.rs
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: setup.tsx
iso/config/: binary
iso/config/hooks/normal/: 01-enable-routerd.chroot
iso/config/includes.chroot_after_packages/etc/: motd
iso/config/includes.chroot_after_packages/etc/josdorOS/: default_config.toml
iso/config/includes.chroot_after_packages/etc/systemd/system/: routerd.service
iso/config/package-lists/: josdoros.list.chroot
