[package]
name = "routerd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
hostname = "0.4.2"
network-interface = "2.0.5"
nix = {version = "0.30", features = ["user"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.36.1"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tower-http = { version = "0.6.11", features = ["cors"] }
